<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">


    <action
        android:id="@+id/action_global_logout_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appedurama.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appedurama.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appedurama.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
        android:id="@+id/action_notifications_to_cursos"
        app:destination="@id/cursosFragment" />
    </fragment>
    <fragment
        android:id="@+id/cursosFragment"
        android:name="com.example.appedurama.ui.notifications.cursos.CursosFragment"
        android:label="CURSOS"
        tools:layout="@layout/fragment_cursos">
        <argument
            android:name="terminoBusqueda"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.appedurama.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_bienvenidaFragment"
            app:destination="@id/bienvenidaFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/bienvenidaFragment"
        android:name="com.example.appedurama.ui.onboarding.BienvenidaFragment"
        android:label="fragment_preguntas_inicio"
        tools:layout="@layout/fragment_preguntas_inicio" >

}        <action
            android:id="@+id/action_bienvenidaFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/bienvenidaFragment"
            app:popUpToInclusive="true" />
}    </fragment>
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.appedurama.ui.perfil.PerfilFragment"
        android:label="PERFIL"
        tools:layout="@layout/fragment_datos_usuario" >
    <action
        android:id="@+id/action_perfil_to_cuestionario"
        app:destination="@id/cuestionarioFragment" />

        <action
            android:id="@+id/action_perfil_to_cursos_inscritos"
            app:destination="@id/cursosInscritosFragment" />

    </fragment>
    <fragment
        android:id="@+id/cursosInscritosFragment"
        android:name="com.example.appedurama.ui.cursos_inscritos.CursosInscritosFragment"
        android:label="Mis Cursos"
        tools:layout="@layout/fragment_cursos_inscritos" />
    <fragment
        android:id="@+id/cuestionarioFragment"
        android:name="com.example.appedurama.ui.perfil.cuestionario.CuestionarioFragment"
        android:label="Cuestionario"
        tools:layout="@layout/fragment_cuestionario" />

</navigation>